--- a/assets/css/acRemote.css
+++ b/assets/css/acRemote.css
@@ -580,15 +580,15 @@ input:checked + .slider:before {
 
 /* TIMER AC REMOTE */
 .container {
-  /* background-color: red; */
+  /* background-color: rgba(255, 0, 0, 0.11); */
   position: fixed;
-  top: 54.2%;
-  left: 53%;
+  top: 48.5%;
+  left: 47.5%;
   transform: translate(-50%, -50%);
   margin-top: 0;
   padding-left: 0;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
 }
 
 .progress-circle {
@@ -616,8 +616,8 @@ input:checked + .slider:before {
 
 .time-left {
   position: absolute;
-  top: 42%;
-  left: 30%;
+  top: 64%;
+  left: 43%;
   transform: translate(-50%, -50%);
   font-size: 2rem;
   font-weight: bold;
@@ -627,8 +627,8 @@ input:checked + .slider:before {
 
 .hrs {
   position: absolute;
-  top: 42%;
-  left: 45%;
+  top: 65%;
+  left: 67%;
   transform: translate(-50%, -50%);
   font-size: 1.1rem;
   font-weight: 500;
@@ -748,18 +748,18 @@ input:checked + .slider:before {
   left: 75%;
 }
 
-.remote-container {
-  opacity: 0.5; /* Visually disabled */
-  pointer-events: none; /* Prevent interaction */
-  filter: grayscale(50%); /* Make it look inactive */
-  transition: opacity 0.3s ease-in-out, filter 0.3s ease-in-out;
-}
+/* .remote-container {
+
+} */
 
 .remote-container.disabled * {
   animation: none !important;  /* Stop all animations */
   transition: none !important; /* Stop hover effects */
   pointer-events: none !important; 
-  
+  opacity: 0.5; /* Visually disabled */
+  pointer-events: none; /* Prevent interaction */
+  filter: grayscale(50%); /* Make it look inactive */
+  transition: opacity 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
 
 .remote-container.enabled {
